# StaticLidar

./: README.md
src/: CMakeLists.txt  package.xml
src/launch/: staticlidar.launch  staticlidar.rviz
src/nodes/src/: hiddriver.py  staticlidardriver.py
